<resources>
    <string name="app_name">Bocatas2</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elige_un_bocadillo">Elige un bocadillo</string>
    <string name="caliente">Caliente</string>
    <string name="frio">Frío</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string-array name="dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>
    <string-array name="rol">
        <item>admin</item>
        <item>alumno</item>
    </string-array>
</resources>